--- a/src/main/resources/com/ardublock/block/block-mapping.properties
+++ b/src/main/resources/com/ardublock/block/block-mapping.properties
@@ -526,6 +526,9 @@ insectbot_go_backright=com.ardublock.translator.block.insectbot.GoBackRightBlock
 insectbot_turn_left=com.ardublock.translator.block.insectbot.TurnLeftBlock
 insectbot_blink_led=com.ardublock.translator.block.insectbot.BlinkLedBlock
 
+#Roboblocks
+roboblocks_blink_led=com.ardublock.translator.block.roboblocks.BlinkLedBlock
+
 #Creator_4Drawing
 iDrawing_set_para=com.ardublock.translator.block.drawing.SetParameters
 iDrawing_run=com.ardublock.translator.block.drawing.Run
