Add initial ifSensor1On block
No back end cpp code yet. Just visual block and code gen.

--- a/src/main/resources/com/ardublock/block/ardublock.properties
+++ b/src/main/resources/com/ardublock/block/ardublock.properties
@@ -1430,3 +1430,5 @@ bg.Midi_B=B
 bd.roboblocks=Roboblocks
 bg.roboblocks_blink_led=blink 
 bg.roboblocks_blink_led.description=blink led
+bg.roboblocks_if_sensor1_on=If Sensor 1 is on
+bg.roboblocks_if_sensor1_on.description=Perform an action when sensor 1 is on
