--- a/src/main/resources/com/ardublock/block/block-mapping.properties
+++ b/src/main/resources/com/ardublock/block/block-mapping.properties
@@ -526,9 +526,6 @@ insectbot_go_backright=com.ardublock.translator.block.insectbot.GoBackRightBlock
 insectbot_turn_left=com.ardublock.translator.block.insectbot.TurnLeftBlock
 insectbot_blink_led=com.ardublock.translator.block.insectbot.BlinkLedBlock
 
-#Roboblocks
-roboblocks_blink_led=com.ardublock.translator.block.roboblocks.BlinkLedBlock
-
 #Creator_4Drawing
 iDrawing_set_para=com.ardublock.translator.block.drawing.SetParameters
 iDrawing_run=com.ardublock.translator.block.drawing.Run
@@ -649,3 +646,8 @@ Midi_GS=com.ardublock.translator.block.jerusalab.MidiInputPortBlock
 Midi_A=com.ardublock.translator.block.jerusalab.MidiInputPortBlock
 Midi_AS=com.ardublock.translator.block.jerusalab.MidiInputPortBlock
 Midi_B=com.ardublock.translator.block.jerusalab.MidiInputPortBlock
+
+#Roboblocks
+roboblocks_if_sensor1_on=com.ardublock.translator.block.roboblocks.IfSensor1On
+roboblocks_blink_led=com.ardublock.translator.block.roboblocks.BlinkLedBlock
+
