Add sensor detection for 5 digital sensors

--- a/src/main/resources/com/ardublock/block/block-mapping.properties
+++ b/src/main/resources/com/ardublock/block/block-mapping.properties
@@ -649,5 +649,9 @@ Midi_B=com.ardublock.translator.block.jerusalab.MidiInputPortBlock
 
 #Roboblocks
 roboblocks_if_sensor1_on=com.ardublock.translator.block.roboblocks.IfSensor1On
+roboblocks_if_sensor2_on=com.ardublock.translator.block.roboblocks.IfSensor2On
+roboblocks_if_sensor3_on=com.ardublock.translator.block.roboblocks.IfSensor3On
+roboblocks_if_sensor4_on=com.ardublock.translator.block.roboblocks.IfSensor4On
+roboblocks_if_sensor5_on=com.ardublock.translator.block.roboblocks.IfSensor5On
 roboblocks_blink_led=com.ardublock.translator.block.roboblocks.BlinkLedBlock
 
