--- a/src/main/resources/com/ardublock/block/ardublock.properties
+++ b/src/main/resources/com/ardublock/block/ardublock.properties
@@ -1432,3 +1432,11 @@ bg.roboblocks_blink_led=blink
 bg.roboblocks_blink_led.description=blink led
 bg.roboblocks_if_sensor1_on=If Sensor 1 is on
 bg.roboblocks_if_sensor1_on.description=Perform an action when sensor 1 is on
+bg.roboblocks_if_sensor2_on=If Sensor 2 is on
+bg.roboblocks_if_sensor2_on.description=Perform an action when sensor 2 is on
+bg.roboblocks_if_sensor3_on=If Sensor 3 is on
+bg.roboblocks_if_sensor3_on.description=Perform an action when sensor 3 is on
+bg.roboblocks_if_sensor4_on=If Sensor 4 is on
+bg.roboblocks_if_sensor4_on.description=Perform an action when sensor 4 is on
+bg.roboblocks_if_sensor5_on=If Sensor 5 is on
+bg.roboblocks_if_sensor5_on.description=Perform an action when sensor 5 is on
