Visual commands added
GoForward, GoBackward, TurnLeft, TurnRight visual component implemented.

--- a/src/main/resources/com/ardublock/block/block-mapping.properties
+++ b/src/main/resources/com/ardublock/block/block-mapping.properties
@@ -654,4 +654,8 @@ roboblocks_if_sensor3_on=com.ardublock.translator.block.roboblocks.IfSensor3On
 roboblocks_if_sensor4_on=com.ardublock.translator.block.roboblocks.IfSensor4On
 roboblocks_if_sensor5_on=com.ardublock.translator.block.roboblocks.IfSensor5On
 roboblocks_blink_led=com.ardublock.translator.block.roboblocks.BlinkLedBlock
+roboblocks_go_forward=com.ardublock.translator.block.roboblocks.GoForward
+roboblocks_go_backward=com.ardublock.translator.block.roboblocks.GoBackward
+roboblocks_turn_right=com.ardublock.translator.block.roboblocks.TurnRight
+roboblocks_turn_left=com.ardublock.translator.block.roboblocks.TurnLeft
 
