--- a/src/main/resources/com/ardublock/block/ardublock.properties
+++ b/src/main/resources/com/ardublock/block/ardublock.properties
@@ -1440,3 +1440,11 @@ bg.roboblocks_if_sensor4_on=If Sensor 4 is on
 bg.roboblocks_if_sensor4_on.description=Perform an action when sensor 4 is on
 bg.roboblocks_if_sensor5_on=If Sensor 5 is on
 bg.roboblocks_if_sensor5_on.description=Perform an action when sensor 5 is on
+bg.roboblocks_go_forward=Go Forward
+bg.roboblocks_go_forward.description=Start moving forward and continue
+bg.roboblocks_go_backward=Go Backward
+bg.roboblocks_go_backward.description=Start moving backward and continue
+bg.roboblocks_turn_right=Turn Right
+bg.roboblocks_turn_right.description=Start turning right and continue
+bg.roboblocks_turn_left=Turn Left
+bg.roboblocks_turn_left.description=Start turning left and continue
