--- a/src/main/resources/com/ardublock/block/block-mapping.properties
+++ b/src/main/resources/com/ardublock/block/block-mapping.properties
@@ -653,6 +653,13 @@ roboblocks_if_sensor2_on=com.ardublock.translator.block.roboblocks.IfSensor2On
 roboblocks_if_sensor3_on=com.ardublock.translator.block.roboblocks.IfSensor3On
 roboblocks_if_sensor4_on=com.ardublock.translator.block.roboblocks.IfSensor4On
 roboblocks_if_sensor5_on=com.ardublock.translator.block.roboblocks.IfSensor5On
+
+roboblocks_if_sensor1_off=com.ardublock.translator.block.roboblocks.IfSensor1Off
+roboblocks_if_sensor2_off=com.ardublock.translator.block.roboblocks.IfSensor2Off
+roboblocks_if_sensor3_off=com.ardublock.translator.block.roboblocks.IfSensor3Off
+roboblocks_if_sensor4_off=com.ardublock.translator.block.roboblocks.IfSensor4Off
+roboblocks_if_sensor5_off=com.ardublock.translator.block.roboblocks.IfSensor5Off
+
 roboblocks_blink_led=com.ardublock.translator.block.roboblocks.BlinkLedBlock
 roboblocks_go_forward=com.ardublock.translator.block.roboblocks.GoForward
 roboblocks_go_backward=com.ardublock.translator.block.roboblocks.GoBackward
